Updated to java 1.8. Doesn't support jasper reports anymore. While for jasper reports we need java 1.6

--- a/AutoFillingObjectsWithData/resources/afowd/base.de_DE.properties
+++ b/AutoFillingObjectsWithData/resources/afowd/base.de_DE.properties
@@ -3,24 +3,24 @@ IN_METHOD=in Methode
 ILLEGAL_ACESS_EXEPTION_IN_METHOD=IllegalAccessException in Methode
 THERE_IS_NO_CLASS_WITH_THE_NAME=Es gibt keine Klasse mit Namen
 THERE_IS_NO_FIELD_WITH_THE_NAME=Es gibt keine Feld mit Namen
-COULD_NOT_INSTANCE_CLASS=Konnte nicht Klasse von Klassename instanziieren oder es gibt keine Implementierung für diese Typ Klasse:
-RANGE_NUMBER_FILTER_FOR_PROPERTY=Reichweite Nummer Filter für Property:
-RANGE_NUMBER_FILTER_FROM=Reichweite Nummer von: 
+COULD_NOT_INSTANCE_CLASS=Konnte nicht Klasse von Klassename instanziieren oder es gibt keine Implementierung fÃ¼r diese Typ Klasse:
+RANGE_NUMBER_FILTER_FOR_PROPERTY=Reichweite Nummer Filter fÃ¼r Property:
+RANGE_NUMBER_FILTER_FROM=Reichweite Nummer von:
 RANGE_NUMBER_FILTER_TO=Reichweite Nummer bis:
-IN_RANGE=In Reichweite: 
+IN_RANGE=In Reichweite:
 TRUE=wahr
 FALSE=falsch
 SORT_CLASS=Sortieren Klasse:
-SORT_PROPERTY=Sortieren Property: 
-ALLOW_NULLS=NULL zulassen: 
-SIZE=Größe
-FROM= von 
+SORT_PROPERTY=Sortieren Property:
+ALLOW_NULLS=NULL zulassen:
+SIZE=GrÃ¶ÃŸe
+FROM= von
 ERROR_NO_DATA=Es gibt kein Daten die Filter zu befriedigen oder es gibt keine Daten
 ERROR_LOADING_INTERNATIONALIZATION_FILE=Fehler beim Laden der Internationalisierung Property Datei
 ERROR_LOADING_FILE=Fehler beim Laden Datei
-ERROR_NO_INTERNATIONALIZATION_FOR_IDENTIFIER=keine Internationalisierung für Bezeichner
-ERROR_NO_PROPERTY_FOR_IDENTIFIER=keine Property für Bezeichner
-WORKING_TIME_FOR_METHOD=Die Arbeitszeit für Methode
+ERROR_NO_INTERNATIONALIZATION_FOR_IDENTIFIER=keine Internationalisierung fÃ¼r Bezeichner
+ERROR_NO_PROPERTY_FOR_IDENTIFIER=keine Property fÃ¼r Bezeichner
+WORKING_TIME_FOR_METHOD=Die Arbeitszeit fÃ¼r Methode
 WORKING_TIME=Die Arbeitszeit
 HOURS= Stunden 
 MINUTES= Minuten 
